# 2D_Bin_Packing

./: .gitignore  2D_Bin_Packing.cpp  2D_Bin_Packing.h  CMakeLists.txt  README.md  bin.h  rect.h
src/: 2DBinPacking.cpp  2DBinPacking.h  Bin.cpp  Bin.h  Bin2.cpp  Bin2.h  FileData.cpp  FileData.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  IOUtils.cpp  IOUtils.h  NFDHAlgorithm.cpp  NFDHAlgorithm.h  Rect.cpp  Rect.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h  Tools.cpp  Tools.h  display.py
